<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/ypp_con">
        <item android:id="@+id/menu_remove_project"
            android:icon="@drawable/ic_delete"
            android:title="@string/project_menu_delete" />

        <item android:id="@+id/menu_clear_project_config"
            android:title="@string/project_menu_reset"
            android:icon="@drawable/ic_reset"
            />

        <item android:id="@+id/menu_download_project"
            android:icon="@drawable/ic_download"
            android:title="@string/project_menu_update" />

        <item android:id="@+id/open_project_dir"
            android:icon="@drawable/ic_file_open"
            android:title="@string/project_menu_browse" >
        </item>

        <item android:id="@+id/menu_package_apk"
            android:icon="@drawable/ic_file_open"
            android:title="@string/project_menu_package" >
        </item>
    </group>
</menu>